--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.3",
     "com.unity.timeline": "1.5.2",
+    "com.unity.tiny.all": "0.32.0-preview.55",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
