--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ name: Github_Builder
 env: 
   NAME: ${{ github.event.repository.name }}
 
+
 jobs:
 
-  checkout_and_clean:
-    name: Checkout and clean
+  build:
+    name: Build
     runs-on: macos-latest
     
     steps:
@@ -33,13 +34,6 @@ jobs:
       run: |
         rm -f -r Builds
         
-  unity_install:
-    name: Unity Install
-    runs-on: macos-latest
-    needs: checkout_and_clean
-    steps:
-
-
     - name: Install UVM
       run: |
         brew tap wooga/tools
@@ -59,61 +53,15 @@ jobs:
       run: |
         uvm clear
         uvm use ${{ steps.unity_version_extract.outputs.UNITY_VERSION }}
-        
-  build:
-    runs-on: self-hosted
-    needs: unity_install
-      
-    strategy:
-      matrix:
-        platform: [StandaloneOSX"]
-
-    steps:
     
     - name: Unity Build
       run: |
         /Applications/Unity/Unity.app/Contents/MacOS/Unity -quit -batchmode -nographics -logFile \
-          -projectPath ./ -buildTarget ${{matrix.platform}}
+          -projectPath ./ -buildTarget StandaloneOSX
     
     - name: Compress Build
       if: false
       run: |
-        rm -f ${{ env.NAME }}_${{ matrix.platform }}.zip
-        cd Builds/${{matrix.platform}} && zip -r -X ../../${{ env.NAME }}_${{matrix.platform}}.zip .
+        rm -f ${{ env.NAME }}_StandaloneOSX.zip
+        cd Builds/StandaloneOSX && zip -r -X ../../${{ env.NAME }}_StandaloneOSX.zip .
   
-  deploy:
-    if: false
-    runs-on: macos-latest
-    needs: build
-    steps:
-    - name: Create Release
-      uses: actions/create-release@v1
-      id: create_release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: build-${{ github.run_number }}
-        release_name: ${{ env.NAME }}
-        body: |
-          New Version!
-        prerelease: true
-        
-    - name: Upload Release Asset WebGL
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./${{ env.NAME }}_WebGL.zip
-        asset_name: ${{ env.NAME }}_WebGL.zip
-        asset_content_type: application/zip
-        
-    - name: Upload Release Asset Windows
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./${{ env.NAME }}_StandaloneWindows64.zip
-        asset_name: ${{ env.NAME }}_Win.zip
-        asset_content_type: application/zip
