--- a/.github/workflows/activation-macOS.yml
+++ b/.github/workflows/activation-macOS.yml
@@ -15,6 +15,13 @@ jobs:
     runs-on: macos-latest
     
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        lfs: true
+        clean: false
+        fetch-depth: 0
+
     - name: Prepare PATH
       run: |
         echo "$GITHUB_WORKSPACE/unity-version-manager/bin" >> $GITHUB_PATH
