--- a/Assets/Scripts/Runtime/InfiniteInvaders.asmdef
+++ b/Assets/Scripts/Runtime/InfiniteInvaders.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Tiny3D",
+    "name": "InfiniteInvaders",
     "rootNamespace": "",
     "references": [
         "GUID:2665a8d13d1b3f18800f46e256720795",
